# AI-Assistant-for-Programming-Projects

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  settings.py  streamlit_app.py
callbacks/: __init__.py  stream_handler.py
file_handling/: __init__.py  get_directory_structure.py  load_files_content.py  load_list_files_in_directory.py
streamlit_tree_select/: __init__.py
streamlit_utils/: sidebar.py
views/: chat_model.py  prompt_display_mode.py
