[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["v.skurikhin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
langchain = "^0.2.16"
pydantic-settings = "^2.5.2"
langchain-core = "^0.2.39"
langchain-openai = "^0.1.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
